Added npm command to build to production including the base-href option.

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-prod-base": "ng build --prod --base-href /my-cool-proj/"
   },
   "private": true,
   "dependencies": {
